@@ -3,6 +3,8 @@ SimpleComplex/Database 1.x, 2018-05-03
 - No custom LogicExceptions; logical exceptions should be detected during
   dev/test, and it's better that all (unexpected) database exceptions
   are/inherit from a single class (DbRuntimeException).
+- (prepared statement) Prevent de-referencing when using an arguments list
+  whose value buckets aren't set as &$value.
 
 SimpleComplex/Database 1.x, 2018-05-02
 --------------------------------------
